Amélioration style .pastDate
Au lieu de changer l'opacité, on rend le background transparent

--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,11 @@ section.day.active {
 }
 
 section.pastDate {
-	opacity:0.4;
+	background: transparent;
+	border-color: transparent;
+}
+section.pastDate > h2 {
+	color:white;
 }
 
 section.dayContent {
