--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,10 @@ img {
 	max-height:150px;
 }
 
+h2 + p img:nth-of-type(2) {
+	display:none;
+}
+
 section.day:hover {
 	background-color: #999;
 }
