--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ section.day {
 	border:1px solid #333;
 	border-radius: 15px;
 	background-color: #EEE;
+	cursor: pointer;
 }
 
 img {
@@ -56,6 +57,8 @@ h2 + p img:nth-of-type(2) {
 
 section.day:hover {
 	background-color: #999;
+	transform: translateY(-0.5rem);
+	transition: transform 150ms ease-out, box-shadow 150ms ease-out;
 }
 
 section.day.active {
@@ -83,7 +86,6 @@ section.dayContent {
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 	width: 400px;
-	max-width: 85%;
 	z-index:1;
 	font-size:2em;
 	max-height:500px;
@@ -136,6 +138,6 @@ footer a {
 		margin-left:0!important;
 		font-size:1.2em!important;
 		max-height:initial!important;
-		
+		max-width: 85%;
 	}
 }
