--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,15 @@
 body {
-	background-color: rgb(20, 41, 20);
-	max-width:1700px;
-	margin:auto;
+	background: linear-gradient(to bottom, #0d1b2a, #1e3c72, #2a5298, #3867b9);
+	max-width: 1700px;
+	margin: auto;
+	background: url("/img/background.jpg");
+	background-size: cover;
+	background-blend-mode: darken;
 }
 
 h1 {
-	color:white;
-	font-size:3em;
+	color: white;
+	font-size: 3em;
 }
 
 header {
@@ -15,50 +18,59 @@ header {
 }
 
 #initial-message {
-	max-width:1200px;
-	visibility:hidden;
+	max-width: 900px;
+	visibility: hidden;
 	text-align: left;
 	padding: 0.5em 1em;
-	color:white;
-	margin:auto;
-	font-size:1.5em;
+	color: white;
+	margin: auto;
+	font-size: 1.5em;
 }
 
 #initial-message a {
-	color:white;
+	color: white;
 }
 
 main {
 	text-align: center;
 	display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 2em;
-	margin:auto;
-	margin-top:3em;
-	padding:0 150px;
+	flex-direction: row;
+	flex-wrap: wrap;
+	gap: 1.25em;
+	margin: auto;
+	margin-top: 3em;
+	padding: 0 50px;
 }
 
 section.day {
-	width:200px;
-	border:1px solid #333;
+	width: 150px;
+	height: 150px;
 	border-radius: 15px;
-	background-color: #EEE;
+	background-color: rgba(255, 255, 255, 0.25);
 	cursor: pointer;
 }
 
 img {
-	max-height:150px;
+	width: 75px;
+	height: 75px;
+	object-fit: contain;
+}
+
+h2 {
+	margin-bottom: 0;
+	margin-top: 0.5em;
 }
 
 h2 + p img:nth-of-type(2) {
-	display:none;
+	display: none;
 }
 
-section.day:hover {
+section.day:not(.active):hover {
 	background-color: #999;
 	transform: translateY(-0.5rem);
-	transition: transform 150ms ease-out, box-shadow 150ms ease-out;
+	transition:
+		transform 150ms ease-out,
+		box-shadow 150ms ease-out;
 }
 
 section.day.active {
@@ -66,30 +78,33 @@ section.day.active {
 }
 
 section.pastDate {
-	background: transparent;
-	border-color: transparent;
+	background: #064cff3d;
 }
 section.pastDate > h2 {
-	color:white;
+	color: white;
 }
 
 section.dayContent {
-	display:none;
+	display: none;
 }
 
 section.dayContent {
-	position:absolute;
-	margin-top:-200px;
-	margin-left:-100px;
 	background: #fff;
-	padding: 20px;
 	border-radius: 8px;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-	width: 400px;
-	z-index:1;
-	font-size:2em;
-	max-height:500px;
+	display: none;
+	font-size: 2em;
+	max-height: 500px;
 	overflow-y: auto;
+	padding: 20px;
+	position: fixed;
+	width: 60%;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	margin: auto;
+	height: 80%;
+	margin: 5% 15%;
 }
 
 .closeButton {
@@ -102,8 +117,8 @@ section.dayContent {
 	font-size: 10px;
 	margin-top: -20px;
 	font-weight: bold;
-	float:right;
-  }
+	float: right;
+}
 
 footer {
 	width: 60%;
@@ -114,37 +129,91 @@ footer {
 	margin-top: 3em;
 	border-top: 1px solid #bbb;
 	padding-top: 1em;
-	color:white;
-	margin-bottom:1em;
+	color: white;
+	margin-bottom: 1em;
 }
 
 footer a {
-	color:white;
+	color: white;
 }
 
 @media screen and (max-width: 500px) {
 	main {
-		font-size: 1.2em;
 		margin-top: 1.5em;
-		padding:10px;
+		padding: 10px;
 	}
 	#initial-message {
-		font-size:1.2em!important;
+		font-size: 1.4em !important;
 	}
 	footer a {
 		display: inline-block;
 	}
 	.day {
-		width:300px!important;
-		margin:auto;
-	}
-	.day img {
-		max-height:250px;
+		margin: auto;
 	}
 	.dayContent {
-		margin-left:-20px!important;
-		font-size:1.2em!important;
-		max-height:initial!important;
-		max-width: 300px!important;
+		margin-left: 0px !important;
+		max-height: initial !important;
+		max-width: 300px;
 	}
+	.active .dayContent {
+		display: block !important;
+	}
+}
+
+/* Ajout d'une animation de neige */
+@keyframes snow {
+	0% {
+		transform: translateY(0);
+		opacity: 1;
+	}
+	100% {
+		transform: translateY(200vh);
+		opacity: 0.5;
+	}
+}
+
+.snowflake {
+	position: absolute;
+	top: -40px;
+	left: 5%;
+	color: #fff;
+	font-size: 1rem;
+	opacity: 0.8;
+	animation: snow 10s linear infinite;
+}
+
+.snowflake:nth-child(1) {
+	left: 10%;
+	font-size: 1.5rem;
+	animation-duration: 12s;
+	animation-delay: 0s;
+}
+
+.snowflake:nth-child(2) {
+	left: 30%;
+	font-size: 1rem;
+	animation-duration: 8s;
+	animation-delay: 2s;
+}
+
+.snowflake:nth-child(3) {
+	left: 50%;
+	font-size: 2rem;
+	animation-duration: 10s;
+	animation-delay: 3s;
+}
+
+.snowflake:nth-child(4) {
+	left: 70%;
+	font-size: 1.2rem;
+	animation-duration: 14s;
+	animation-delay: 5s;
+}
+
+.snowflake:nth-child(5) {
+	left: 90%;
+	font-size: 1.8rem;
+	animation-duration: 9s;
+	animation-delay: 6s;
 }
