--- a/css/styles.css
+++ b/css/styles.css
@@ -55,8 +55,14 @@ section.day {
 	height: 75px;
 	object-fit: contain;
 }
-.day.hasTitle img {
+.day.hasTitle.pastDate img {
 	height: 50px;
+}
+
+.dayContent img {
+	width: initial !important;
+	height: initial !important;
+	max-width: 100%;
 }
 
 h2 {
@@ -70,9 +76,11 @@ h2 + p img:nth-of-type(2) {
 .futureDate h2 span {
 	display: none;
 }
-.pastDate h2 span {
+.hasTitle.pastDate h2 span {
 	display: block;
 	font-size: 0.5em !important;
+	height: 20px;
+	margin-top: 5px;
 }
 
 section.day:not(.active):hover {
@@ -115,6 +123,22 @@ section.dayContent {
 	margin: auto;
 	height: 80%;
 	margin: 5% 15%;
+	transform: translate(0%, -25%);
+	text-align: left;
+}
+
+section.day.active .dayContent {
+	animation: fadeIn 0.5s ease-out forwards;
+}
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		transform: translate(0%, -25%);
+	}
+	to {
+		opacity: 1;
+		transform: translate(0%, 0%);
+	}
 }
 
 .closeButton {
@@ -178,7 +202,7 @@ footer a {
 		opacity: 1;
 	}
 	100% {
-		transform: translateY(200vh);
+		transform: translateY(150vh);
 		opacity: 0.5;
 	}
 }
