--- a/css/styles.css
+++ b/css/styles.css
@@ -18,13 +18,13 @@ header {
 }
 
 #initial-message {
-	max-width: 900px;
+	max-width: 1200px;
 	visibility: hidden;
 	text-align: left;
 	padding: 0.5em 1em;
 	color: white;
 	margin: auto;
-	font-size: 1.5em;
+	font-size: 1.25em;
 }
 
 #initial-message a {
@@ -38,7 +38,7 @@ main {
 	flex-wrap: wrap;
 	gap: 1.25em;
 	margin: auto;
-	margin-top: 3em;
+	margin-top: 2em;
 	padding: 0 50px;
 }
 
@@ -65,9 +65,13 @@ section.day {
 	max-width: 100%;
 }
 
+h1,
+h2 {
+	margin: 0.5em;
+}
+
 h2 {
 	margin-bottom: 0;
-	margin-top: 0.5em;
 }
 
 h2 + p img:nth-of-type(2) {
@@ -209,9 +213,20 @@ footer a {
 		opacity: 1;
 	}
 	100% {
-		transform: translateY(150vh);
 		opacity: 0.5;
+		transform: translateY(100vh);
 	}
+}
+
+.snow-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	pointer-events: none;
+	z-index: 10;
+	overflow: hidden;
 }
 
 .snowflake {
