--- a/css/styles.css
+++ b/css/styles.css
@@ -198,7 +198,21 @@ footer a {
 		display: inline-block;
 	}
 	.day {
+		width: 200px !important;
+		height: 200px !important;
 		margin: 30px 20%;
+	}
+	.day h2 {
+		font-size: 1.75em !important;
+	}
+	.day img {
+		width: 110px;
+		height: 120px;
+		object-fit: contain;
+	}
+	.day.hasTitle.pastDate img {
+		height: 90px !important;
+		width: 100px !important;
 	}
 	.dayContent {
 		width: 75% !important;
