--- a/css/styles.css
+++ b/css/styles.css
@@ -239,6 +239,9 @@ footer a {
 		margin-top: 1.5em;
 		padding: 10px;
 	}
+	h1 {
+		font-size: 2.75em;
+	}
 	#initial-message {
 		font-size: 1.4em !important;
 	}
