--- a/css/styles.css
+++ b/css/styles.css
@@ -231,6 +231,10 @@ footer a {
 	color: #470302;
 }
 
+iframe {
+	max-width: 100%;
+}
+
 @media screen and (max-width: 500px) {
 	body {
 		background-size: auto;
