--- a/css/editor.css
+++ b/css/editor.css
@@ -28,6 +28,29 @@ body.editMode .copy-content-button {
 	top: 10px;
 	left: 125px;
 }
+body.editMode .help-button {
+	position: absolute;
+	top: 10px;
+	left: 255px;
+}
+
+body.editMode .help-modal {
+	position: fixed;
+	background: white;
+	left: 600px;
+	font-size: 1.1em;
+	top: 20px;
+	max-width: 700px;
+	padding: 2em;
+}
+
+body.editMode .help-modal-close {
+	display: block;
+	font-size: 2em;
+	text-align: right;
+	margin-top: -0.5em;
+	cursor: pointer;
+}
 
 body.editMode .editor {
 	padding-top: 40px;
