fix: on ne cache pas l'image du jour actuel quand il n'y pas d'image personnalisée et pas de titre presonnalisé

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,8 +74,7 @@ section.day {
 	}
 }
 
-.pastDate.noCustomImage.hasCustomTitle .dayImages,
-.currentDate.noCustomImage.hasCustomTitle .dayImages {
+.pastDate.noCustomImage.hasCustomTitle .dayImages {
 	display: none;
 }
 
