--- a/css/styles.css
+++ b/css/styles.css
@@ -316,6 +316,11 @@ iframe {
 	max-width: 100%;
 }
 
+code {
+	word-break: break-word;
+	white-space: break-spaces;
+}
+
 @media screen and (max-width: 500px) {
 	body {
 		background-size: auto;
