feat: bouton de copie dans le presse-papier des blocs code (utile notamment pour l'aide)

--- a/css/styles.css
+++ b/css/styles.css
@@ -314,6 +314,11 @@ iframe {
 	max-width: 100%;
 }
 
+pre {
+	width: fit-content;
+	max-width: 90%;
+	padding: 1em 6em 1em 2em;
+}
 code {
 	word-break: break-word;
 	white-space: break-spaces;
