fix(css): amélioration de la couleur des cases (meilleur affichage si on change l'image de fond)

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,10 @@ section.pastDate {
 section.currentDate {
 	background: #34bb3570 !important;
 }
+.pastDate,
+.currentDate {
+	backdrop-filter: sepia(1);
+}
 section.pastDate > h2 {
 	color: white;
 }
